Polish title (author, etc.)

--- a/main.tex
+++ b/main.tex
@@ -29,10 +29,12 @@
 
 \begin{document}
 \title{QuanTEEum: Quantum Cryptography via TEEs}
-% \author{[Redacted for review]}
-% \institute{[Redacted for review]}
-\author{Shoaib Ahmed}
-\institute{Cycles Protocol SA}
+\author{[Redacted for review]}
+\authorrunning{[Redacted for review]}
+\institute{[Redacted for review]}
+% \author{Shoaib Ahmed}
+% \authorrunning{S. Ahmed}
+% \institute{Independent Researcher\\ \email{sufialhussaini@gmail.com}}
 \maketitle
 
 \begin{abstract}
