Finalized abstract, motivation and approach

--- a/main.tex
+++ b/main.tex
@@ -38,18 +38,20 @@
 \maketitle
 
 \begin{abstract}
-One-shot signatures (OSS) have emerged as a versatile abstraction underpinning applications including quantum money and ceremony-free SNARK parameters (e.g., Groth16). Existing OSS constructions rely on quantum hardware that will not be widely available soon. Naïve emulations using a single trusted execution environment (TEE) inherit brittle unclonability requirements and concentrate integrity risk in one enclave, while certified deletion on a single device is notoriously hard. We present \prot{}, an honest-minority distributed protocol that realizes certified deletion and one-shot signing by running threshold signing entirely \emph{inside} heterogeneous TEEs. In \prot{}, $n$ enclaves run a threshold DKG, produce exactly one threshold signature on the designated message $m^{\star}$, and each emits a remote attestation (RA) binding an in-enclave deletion event; security is \emph{additive}, as independent deletion attestations strictly raise the minimum cost-of-attack, and TEE heterogeneity provides defense-in-depth against supply-chain risks. We formalize the \emph{exact-one} acceptance condition for one-shot signing in a remote-attestation model under an abstract replay predicate \textsf{Fresh} (enforcing per-session counter monotonicity), and we \emph{discuss} pluggable attestation back ends—(a) conventional TEE RA, (b) cryptoeconomic attestations via escrowed collateral, and (c) future quantum instantiations—yielding a clean upgrade path. We sketch applications to QuanTEEum money and de-facto ceremony-free Groth16 CRS generation, and discuss liveness, freshness, and rollback subtleties. Our treatment follows the \emph{relaxed} OSS notion \cite{pkc-2024-34093}, instantiating one-shotness via certified deletion today and cleanly upgrading to quantum OSS later.
+One-shot signatures (OSS) have emerged as a versatile abstraction underpinning various blockchain-facing applications. Existing OSS constructions rely on quantum hardware that will not be widely available soon. Naïve emulations using a single trusted execution environment (TEE) inherit brittle unclonability requirements and concentrate integrity risk in one enclave, while certified deletion on a single device is notoriously hard. 
+
+We present \prot{}, an honest-minority distributed protocol that realizes certified deletion and OSS by running threshold signing entirely \emph{inside} heterogeneous TEEs. In \prot{}, $n$ enclaves run a threshold DKG, produce exactly one threshold signature on the designated message $m^{\star}$, and each emits a remote attestation (RA) binding an in-enclave deletion event; security is \emph{additive}, as independent deletion attestations strictly raise the minimum cost-of-attack, and TEE heterogeneity provides defense-in-depth against supply-chain risks. We formalize the \emph{exact-one} acceptance condition for one-shot signing in a remote-attestation model under an abstract replay predicate \textsf{Fresh} (enforcing per-session counter monotonicity), and we \emph{discuss} pluggable attestation back ends—(a) conventional TEE RA, (b) cryptoeconomic attestations via escrowed collateral, and (c) future quantum instantiations—yielding a clean upgrade path. We sketch applications to QuanTEEum money and de-facto ceremony-free Groth16 CRS generation, and discuss liveness, freshness, and rollback subtleties. 
 \end{abstract}
 
 \section{Introduction}
 \paragraph{Motivation.}
-One-shot signatures (OSS) guarantee that a secret signing key can produce at most one valid signature; thereafter any further signing with that key is infeasible. Certified deletion complements OSS by providing verifiable deletion of the relevant secrets after use. Together they enable applications such as quantum money, perfect-finality blockchains, smart contracts without a blockchain, ordered and budgeted signatures, and ceremony-free Groth16 CRS.
-Pure OSS realizations rely on quantum unclonability; TEE-based attempts exist but typically use a single enclave, making certified deletion both hard and brittle.
-While supply-chain hardening and reproducible builds are crucial, defense-in-depth via \emph{heterogeneous} enclaves gives additive security. The tension is that unclonability prefers no replication, whereas robustness prefers multiple TEEs; QuanTEEum reconciles this by DKG-first key sharing, a one-shot latch, and \emph{certified deletion} with verifier-checked freshness. We adopt the \emph{relaxed OSS} viewpoint (Kiayias, PKC’24 invited): enforce one-shotness via TEE-backed deletion today, with a clean upgrade path to quantum OSS back ends tomorrow.
-
+One-shot signatures (OSS) guarantee that a secret signing key can produce at most one valid signature; thereafter any further signing with that key is infeasible. Certified deletion complements OSS by providing verifiable deletion of the relevant secrets after use. Together, these primitives enable applications such as quantum money, perfect-finality blockchains, smart contracts without a blockchain, ordered and budgeted signatures, and ceremony-free Groth16 CRS. 
+Current TEE-based attempts at realizing OSS typically use a single enclave, making certified deletion both hard and brittle. The central tension is that \emph{unclonability} pushes toward keeping a single non-replicated secret, whereas \emph{robustness and defense-in-depth} call for replication across heterogeneous TEEs. While supply chain hardening and reproducible builds are crucial, defense-in-depth via \emph{heterogeneous} enclaves gives additive security.
+This motivates a design that achieves exact-once semantics while distributing trust across multiple enclaves.
 
 \paragraph{Our approach.}
-\prot{} lifts OSS to an \emph{honest-minority} setting by distributing the signing key across independent enclaves using a threshold DKG. The system produces one threshold signature on a frozen message and then aggregates per-enclave certified-deletion attestations bound to the session. The exact-one property reduces to the infeasibility of recovering a deleted threshold share from \emph{at least one} honest enclave, plus freshness/anti-replay for attestations.
+\prot{} lifts OSS to an \emph{honest-minority} setting by distributing the signing key across independent (heterogeneous) enclaves via a threshold DKG and binding the resulting (group) public key with per-enclave DKG attestations. The system produces exactly one threshold signature on the designated message and then aggregates per-enclave certified-deletion attestations bound to the same session. 
+Exact-once acceptance reduces to the infeasibility of recovering a deleted threshold share from \emph{at least one} honest enclave, plus freshness/anti-replay for attestations and standard threshold unforgeability. We adopt the \emph{relaxed OSS} notion: one-shotness today via TEE-backed certified deletion, with a clean upgrade path to quantum implementations.
 
 \paragraph{Contributions.}
 \begin{itemize}[leftmargin=*,itemsep=0.25em,topsep=0.25em]
