--- a/main.tex
+++ b/main.tex
@@ -28,7 +28,7 @@
 \newcommand{\code}[1]{\texttt{#1}}
 
 \begin{document}
-\title{QuanTEEum: Quantum Cryptography via TEEs}
+\title{Short Paper: QuanTEEum: Quantum Cryptography via TEEs}
 \author{[Redacted for review]}
 \authorrunning{[Redacted for review]}
 \institute{[Redacted for review]}
